src/objects/CHANNEL_ORDERS__Service_Order_Detail__c.object
<CustomObject>
    <fields>
        <fullName>CHANNEL_ORDERS__Application__c</fullName>
        <description>Represents the Application Name from the Product Catalog.</description>
        <label>App</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Currency__c</fullName>
        <formula>text(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Contract_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Price_Per_Month__c</fullName>
        <label>Customer Price (Unit/Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Price__c</fullName>
        <inlineHelpText>Required if you are ordering a PNR product.  Please provide the monthly customer price per seat of your application.</inlineHelpText>
        <label>Customer Price (User/Month)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Estimated_SFDC_Price_Per_Month__c</fullName>
        <formula>IF ( ISPICKVAL(CHANNEL_ORDERS__pc_Pricing_Type__c , &apos;PNR&apos;), 
			MAX( CHANNEL_ORDERS__Quantity__c * CHANNEL_ORDERS__Customer_Price_Per_Month__c * (CHANNEL_ORDERS__pc_PNR__c / 100), CHANNEL_ORDERS__pc_Floor_Price__c  ) , 
			CHANNEL_ORDERS__pc_Fixed_Price__c )</formula>
        <label>Estimated Total SFDC Price/Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Fixed_Price__c</fullName>
        <formula>if( CHANNEL_ORDERS__Pricing_Type__c = &quot;PNR&quot;, &quot; &quot;,

if (round(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Fixed_Price__c,0) = CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Fixed_Price__c, CHANNEL_ORDERS__Currency__c &amp; &quot; &quot; &amp; text(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Fixed_Price__c) &amp; &quot;.00&quot;, 

CHANNEL_ORDERS__Currency__c &amp; &quot; &quot; &amp; text(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Fixed_Price__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Floor_Price__c</fullName>
        <formula>if( CHANNEL_ORDERS__Pricing_Type__c = &quot;FIXED&quot;, &quot; &quot;,

if (round(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c,0) = CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c, CHANNEL_ORDERS__Currency__c &amp; &quot; &quot; &amp; text(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c) &amp; &quot;.00&quot;,

CHANNEL_ORDERS__Currency__c &amp; &quot; &quot; &amp; text(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Floor_Price__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Number_Of_Users_ISVforce__c</fullName>
        <label># of users (ISVforce)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__PNR__c</fullName>
        <formula>CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__PNR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PNR %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Contract_Term__c</fullName>
        <formula>CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Contract Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Order__c</fullName>
        <label>Service Order</label>
        <referenceTo>CHANNEL_ORDERS__Service_Order__c</referenceTo>
        <relationshipLabel>Service Order Detail</relationshipLabel>
        <relationshipName>Partner_Order_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Pricing_Type__c</fullName>
        <formula>TEXT(CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Pricing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_ID__c</fullName>
        <formula>CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Line_Desc_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if there is an individual description for this detail rather than using one for the all the order details.</description>
        <inlineHelpText>True if this detail uses an individual description rather than using SFDC Invoice Description</inlineHelpText>
        <label>Product Line Description Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Line_Description__c</fullName>
        <inlineHelpText>Product Line Description will be displayed on the Invoice</inlineHelpText>
        <label>SFDC Invoice Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CHANNEL_ORDERS__Partner_Product_Catalog__c.CreatedDate</field>
                <operation>greaterThan</operation>
                <value>1/1/1900 7:34 AM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>CHANNEL_ORDERS__Partner_Product_Catalog__c</referenceTo>
        <relationshipLabel>Service Order Detail</relationshipLabel>
        <relationshipName>Product_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Special_Terms__c</fullName>
        <label>Product Special Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Billing_Frequency__c</fullName>
        <description>Inherited from Product Catalog, controls the frequency in which this Product is Billed, unit is Months.</description>
        <label>Billing Frequency</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Cancellation_Terms__c</fullName>
        <description>Inherited from Product Catalog, controls the Cancellation time for this Product, unit is Days.</description>
        <label>Cancellation Terms (Days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Contract_Auto_Renew__c</fullName>
        <description>Inherited from Product Catalog, controls if a contract for this product is Auto Renewed or not.</description>
        <label>Contract Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Contract_Length__c</fullName>
        <description>Inherited from Product Catalog, controls the length of a contract for this Product, unit is Months.</description>
        <label>Contract Length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Custom_Unit__c</fullName>
        <description>Inherited from Product Catalog, represents the custom unit value when Pricing Unit is set to Custom.</description>
        <label>Custom Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Fixed_Price__c</fullName>
        <description>Inherited from Product Catalog, represents the Fixed Price for the Product, used during billing process.</description>
        <label>Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Floor_Price__c</fullName>
        <description>Inherited from Product Catalog, represents the Floor Price for the Product, used during billing process.</description>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_PNR__c</fullName>
        <label>PNR %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Partner_Contract_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inherited from Product Catalog, direct relation to the Contract Term this product is tied to.</description>
        <label>Partner Contract Term</label>
        <referenceTo>CHANNEL_ORDERS__Partner_Contract_Terms__c</referenceTo>
        <relationshipLabel>Service Order Detail</relationshipLabel>
        <relationshipName>Service_Order_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Pricing_Type__c</fullName>
        <label>Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PNR</fullName>
                </value>
                <value>
                    <fullName>FIXED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Pricing_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Org</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Product_ID__c</fullName>
        <label>Product ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pc_Renewal_Terms__c</fullName>
        <label>Renewal Terms (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__pct_Currency__c</fullName>
        <description>Inherited from Contract Terms Default_Contract_Currency, controls the type of currency used in the billing process.</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Order Detail</label>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOD-{0000000000}</displayFormat>
        <label>Service Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CHANNEL_ORDERS__CancellationTerms_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CHANNEL_ORDERS__pc_Partner_Contract_Term__r.CHANNEL_ORDERS__Allow_Cancellation_Terms_Override__c,    ISBLANK(CHANNEL_ORDERS__pc_Cancellation_Terms__c)  )</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__pc_Cancellation_Terms__c</errorDisplayField>
        <errorMessage>Cancellation Terms is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__ContractLength_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  CHANNEL_ORDERS__pc_Partner_Contract_Term__r.CHANNEL_ORDERS__Allow_Contract_Length_Override__c , ISBLANK( CHANNEL_ORDERS__pc_Contract_Length__c ) )</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__pc_Contract_Length__c</errorDisplayField>
        <errorMessage>Contract Length is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Customer_Price_Per_Month_Must_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Created_with_new_COA__c), NOT( ISPICKVAL( CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c , &apos;ISVForce&apos; )), OR(NOT( ISBLANK( CHANNEL_ORDERS__Customer_Price_Per_Month__c )),NOT( ISNULL( CHANNEL_ORDERS__Customer_Price_Per_Month__c  ) )))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Price_Per_Month__c</errorDisplayField>
        <errorMessage>Field must be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Customer_Price_is_required_if_PNR</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Created_with_new_COA__c), TEXT(CHANNEL_ORDERS__pc_Pricing_Type__c) = &quot;PNR&quot;, ISNULL( CHANNEL_ORDERS__Customer_Price__c ), NOT(ISPICKVAL(  CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c  ,&quot;ISVForce&quot;)))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Price__c</errorDisplayField>
        <errorMessage>Customer Price is required if the product&apos;s Pricing Type is PNR</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__ISVForce_Cust_Price_User_Month_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND( CHANNEL_ORDERS__Pricing_Type__c = &quot;PNR&quot;, OR( NOT( ISNULL( CHANNEL_ORDERS__Customer_Price__c  )),NOT( ISBLANK(CHANNEL_ORDERS__Customer_Price__c  ))), ISPICKVAL( CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c ,&quot;ISVForce&quot;))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Price__c</errorDisplayField>
        <errorMessage>Field must be blank if ordering an ISVForce Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__ISVForce_Customer_Price_per_month_reqd</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Created_with_new_COA__c), ISPICKVAL( CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c , &apos;ISVForce&apos; ), OR( ISBLANK(CHANNEL_ORDERS__Customer_Price_Per_Month__c), ISNULL( CHANNEL_ORDERS__Customer_Price_Per_Month__c ) ))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Price_Per_Month__c</errorDisplayField>
        <errorMessage>Field can not be empty. You must set a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__ISVForce_Quantity_Must_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Created_with_new_COA__c), ISPICKVAL(   CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c   , &apos;ISVForce&apos;) ,NOT( OR( ISBLANK( CHANNEL_ORDERS__Quantity__c ), ISNULL( CHANNEL_ORDERS__Quantity__c ))))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Quantity__c</errorDisplayField>
        <errorMessage>Field must be empty if ordering an ISVForce product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__ISVForce_num_users_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Created_with_new_COA__c),ISPICKVAL( CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c  , &apos;ISVForce&apos;), OR(ISBLANK(CHANNEL_ORDERS__Number_Of_Users_ISVforce__c), ISNULL(CHANNEL_ORDERS__Number_Of_Users_ISVforce__c) ))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Number_Of_Users_ISVforce__c</errorDisplayField>
        <errorMessage>Field can not be empty. You must set a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Num_Users_ISVForce_Must_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Created_with_new_COA__c), NOT(ISPICKVAL(  CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c  , &apos;ISVForce&apos;)), OR(NOT(ISBLANK(CHANNEL_ORDERS__Number_Of_Users_ISVforce__c)), 
NOT( ISNULL(CHANNEL_ORDERS__Number_Of_Users_ISVforce__c) )))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Number_Of_Users_ISVforce__c</errorDisplayField>
        <errorMessage>Field must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Product_must_belong_to_contract_terms</fullName>
        <active>true</active>
        <errorConditionFormula>CHANNEL_ORDERS__Partner_Contract_Term__c &lt;&gt;  CHANNEL_ORDERS__Product_Name__r.CHANNEL_ORDERS__Partner_Contract_Terms__r.Name</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Product_Name__c</errorDisplayField>
        <errorMessage>The Product you selected is not part of the Contract Term you chose on the Service Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Quantity_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISPICKVAL( CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c  , &apos;ISVForce&apos;) ), NOT(ISPICKVAL( CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c  , &apos;ISV&apos;) ), OR( ISBLANK( CHANNEL_ORDERS__Quantity__c ), ISNULL( CHANNEL_ORDERS__Quantity__c )))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Quantity__c</errorDisplayField>
        <errorMessage>Field can not be empty. You must set a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__RenewalTerms_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  CHANNEL_ORDERS__pc_Partner_Contract_Term__r.CHANNEL_ORDERS__Allow_Renewal_Length_Override__c , ISBLANK( CHANNEL_ORDERS__pc_Renewal_Terms__c ) )</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__pc_Renewal_Terms__c</errorDisplayField>
        <errorMessage>Renewal Terms is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Special_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED(CHANNEL_ORDERS__Special_Instructions__c ), ISCHANGED( CHANNEL_ORDERS__Product_Special_Terms__c )) ,CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Order_Status1__c  !=  &apos;Draft&apos;,CHANNEL_ORDERS__Partner_Order__r.CHANNEL_ORDERS__Service_Order_Status1__c  !=  &apos;Error&apos;)</errorConditionFormula>
        <errorMessage>Field can not be updated. Service Order status should be: &apos;Error&apos; or &apos;Draft&apos;</errorMessage>
    </validationRules>
</CustomObject>